--- a/products.css
+++ b/products.css
@@ -1,168 +1,504 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-variation-settings:
-      "slnt" 0;
-    padding-top: 40px;
-    background: #EEEEEE;
-    overflow-x: hidden;
+body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+  padding-top: 40px;
+  background: #eeeeee;
+  overflow-x: hidden;
 }
 
-.container{
-    max-width: 1200px;
-    margin: auto;
-    /* background: black; */
+.hide {
+  display: none;
 }
 
-main .brandButton{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+.container {
+  max-width: 1200px;
+  margin: auto;
+  /* border: 1px solid black; */
 }
 
-main .brandButton button{
-    padding: 10px 15px;
-    width: 150px;
-    font-size: 15px;
-    border: none;
-    background: #111F4D;
-    color: white;
-    border-radius: 7px;
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
+header {
+  /* height: 0px; */
+  background: #800000;
+  top: 0;
+  width: 100%;
+  /* z-index: 1; */
+  font-size: 16px;
 }
 
-.deactive{
-    opacity: 0.3;
+.displayNone {
+  display: none;
+}
+
+header .nav_bar {
+  background: #800000;
+  width: 100%;
+  height: 70px;
+  /* border: 1px solid black; */
+  /* height: 100%; */
+  margin-top: -40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+}
+
+/* header .nav_bar.sticky {
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    animation: navTransition 0.5s ease-in-out;
+  } */
+
+header .nav_bar .main_nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header .nav_bar .main_div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+}
+
+header .nav_bar .main_div .nav_left {
+  display: flex;
+}
+
+header .nav_bar .main_div .nav_left img {
+  width: 50px;
+  height: 50px;
+  outline: 0;
+}
+
+header .nav_bar .main_div .nav_links {
+  outline: 0;
+}
+
+header .nav_bar .main_div .nav_right .menu {
+  display: none;
+  padding: 10px;
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  background: #007ab7;
+  border: 0;
+  border-radius: 7px;
+  color: white;
+  outline: 0;
+  margin-top: 5px;
+  margin-left: 70px;
+}
+
+header .nav_bar .main_div .nav_right .menu:hover {
+  opacity: 0.7;
+  transition: 0.6s;
+  background: grey;
+  color: #007ab7;
+  font-weight: bold;
+  font-size: 15px;
+  outline: 0;
+}
+
+header .nav_bar .nav_links {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-left: 40px;
+}
+
+.nav_bar .nav_links li {
+  list-style-type: none;
+}
+
+header .nav_bar .namePrint {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  font-size: 20px;
+  /* z-index: 519; */
+  color: white;
+}
+
+header .nav_bar .logOutButton {
+  position: absolute;
+  right: 50px;
+  top: 20px;
+  padding: 7px 15px;
+  border: 0;
+  outline: 0;
+  /* background: #800000; */
+  background: #7882a4;
+  color: white;
+  border-radius: 10px;
+}
+
+.nav_bar .nav_right .nav_links li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+}
+
+@media (max-width: 600px) {
+  .nav_right .nav_links.hide {
+    display: none;
+  }
+
+  header .nav_bar .main_div .nav_right .menu {
+    display: block;
+  }
+
+  header {
+    height: 70px;
+  }
+
+  header .nav_bar .main_div {
+    gap: 0px;
+    /* flex-direction: column; */
+  }
+
+  .nav_right .nav_links {
+    font-size: 20px;
+    flex-direction: column;
+    position: absolute;
+    top: 35px;
+    left: -8.5%;
+    background: white;
+    font-weight: bold;
+    width: 100%;
+    /* margin-left: -300px; */
+    margin-top: 35px;
+    /* margin-top: 75px; */
+    padding: 20px;
+    opacity: 0.9;
+    color: black;
+  }
+
+  .nav_links.marginNavLinks {
+    margin-top: 75px;
+  }
+
+  .nav_bar .nav_right .nav_links li a {
+    color: black;
+  }
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  /* background: black; */
+}
+
+main .brandButton {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+main .brandButton button {
+  padding: 10px 15px;
+  width: 150px;
+  font-size: 15px;
+  border: none;
+  background: #111f4d;
+  color: white;
+  border-radius: 7px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.deactive {
+  opacity: 0.3;
 }
 /* 
 main .brandButton button:hover{
     opacity: 0.8;
 } */
 
-
-main .hideShraddha{
-    display: none;
+main {
+  margin-top: 70px;
 }
 
-main .hideSirjan{
-    display: none;
+main .hideShraddha {
+  display: none;
+}
+
+main .hideSirjan {
+  display: none;
 }
 
 main .right {
-    background: white;
-    margin-top: 50px;
+  background: white;
+  margin-top: 50px;
 }
 
-main .right .products_box .right_div{
-    display: flex;
-    justify-content: right;
-    position: relative;
-    right: 200px;
-    /* gap: 30px; */
-    /* background: #E1F4F3; */
-    gap: 30px;
-    padding: 10px;
-    /* width: 1000px; */
+main .right .products_box .right_div {
+  display: flex;
+  justify-content: right;
+  position: relative;
+  right: 200px;
+  /* gap: 30px; */
+  /* background: #E1F4F3; */
+  gap: 30px;
+  padding: 10px;
+  /* width: 1000px; */
 }
 
-main .right .products_box .right_div .left_content{
-    display: flex;
-    text-align: center;
-    align-items: center;
-    gap: 15px;
-    position: relative;
-    /* height: 210px; */
+main .right .products_box .right_div .left_content {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  gap: 15px;
+  position: relative;
+  /* height: 210px; */
 }
 
-main .right .products_box .right_div .left_content img{
-    border-radius: 5px;
+main .right .products_box .right_div .left_content img {
+  border-radius: 5px;
 }
 
-main .right .products_box .right_div .right_content{
-    height: 300px;
-    /* background: orange; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+main .right .products_box .right_div .right_content {
+  height: 300px;
+  /* background: orange; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-main .right .products_box .right_div .right_content img{
-    height: 300px;
-    width: 300px;
-    border-radius: 4px;
+main .right .products_box .right_div .right_content img {
+  height: 300px;
+  width: 300px;
+  border-radius: 4px;
 }
 
 /* break */
 
-main .left{
-    margin-top: 50px;
-    /* width: 400px; */
-    background: #F5E8DD;
+main .left {
+  margin-top: 50px;
+  /* width: 400px; */
+  background: #f5e8dd;
 }
 
-main .left .products_box .left_div{
-    display: flex;
-    justify-content: left;
-    position: relative;
-    left: 200px;
-    /* gap: 30px; */
-    /* background: #E1F4F3; */
-    gap: 30px;
-    padding: 10px;
-    /* width: 1000px; */
+main .left .products_box .left_div {
+  display: flex;
+  justify-content: left;
+  position: relative;
+  left: 200px;
+  /* gap: 30px; */
+  /* background: #E1F4F3; */
+  gap: 30px;
+  padding: 10px;
+  /* width: 1000px; */
 }
 
-main .left .products_box .left_div .right_content{
-    display: flex;
-    text-align: center;
-    align-items: center;
-    gap: 15px;
-    position: relative;
-    /* height: 210px; */
+main .left .products_box .left_div .right_content {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  gap: 15px;
+  position: relative;
+  /* height: 210px; */
 }
 
-main .left .products_box .left_div .right_content img{
-    border-radius: 5px;
+main .left .products_box .left_div .right_content img {
+  border-radius: 5px;
 }
 
-main .left .products_box .left_div .left_content{
-    height: 300px;
-    /* background: orange; */
-    display: flex;
+main .left .products_box .left_div .left_content {
+  height: 300px;
+  /* background: orange; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+main .left .products_box .left_div .left_content img {
+  height: 300px;
+  width: 300px;
+  border-radius: 4px;
+}
+
+img {
+  width: 150px;
+  height: 200px;
+}
+img.main_img {
+  height: 100px !important;
+  width: 100px !important;
+  /* border: 1px solid black; */
+}
+
+footer {
+  background: #800000;
+  padding: 0;
+  /* height: 200px; */
+  margin-top: 60px;
+  /* position: relative; */
+}
+
+footer .main_footer {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 50px;
+  align-items: center;
+  /* margin-top: 50px; */
+  height: 200px;
+  /* text-align: center; */
+  /* background: white; */
+}
+
+footer .company_info {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  text-align: left;
+}
+
+footer .company_info h1 {
+  color: #007ab7;
+  /* color: white; */
+  font-weight: bold;
+}
+
+footer .company_info h4 {
+  /* text-align: center; */
+  color: white;
+}
+
+footer .company_features .company_features_list {
+  list-style-type: none;
+  font-weight: bold;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  text-align: center;
+}
+
+footer .company_features .company_features_list li a {
+  color: white;
+  text-decoration: none;
+  transition: all 0.4s ease-in-out;
+}
+
+footer .company_features .company_features_list li a:hover {
+  font-size: 30px;
+}
+
+footer .company_features,
+footer .company_info,
+footer .company_services {
+  margin-top: 60px;
+}
+
+footer .company_services {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  gap: 20px;
+}
+
+footer .company_services h2 a {
+  /* color: #007AB7; */
+  color: white;
+  outline: 0;
+  text-decoration: none;
+  border-bottom: 3px solid black;
+  padding-bottom: 5px;
+  transition: all 0.5s ease-in-out;
+}
+
+footer .company_services h2 a:hover {
+  color: black;
+  transition: all 0.5s ease-in-out;
+  border-bottom: 3px solid white;
+}
+
+/* footer .company_services h3{
+      color: white;
+      margin-top: 7px;
+  } */
+
+.contact_way {
+  text-align: center;
+  /* padding-bottom: 20px; */
+  margin-bottom: 20px;
+}
+
+.contact_way legend {
+  font-size: 30px;
+  color: grey;
+  font-weight: bold;
+}
+
+.contact_way .contact_platform {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  gap: 50px;
+  /* justify-content:space-evenly; */
+  margin-top: 15px;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.contact_way .contact_platform a {
+  color: white;
+  font-size: 30px;
+  transition: all 0.3s ease-in-out;
+}
+
+.contact_way .contact_platform a:hover {
+  font-size: 40px;
+}
+
+@media (max-width: 1060px) {
+  footer {
+    height: 1000px;
+  }
+  footer .main_footer {
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /* text-align:center; */
+  }
+  .main_footer .company_info,
+  .main_footer .company_services {
+    text-align: center;
+    /* background: orange; */
+  }
+  footer .connect_email_ {
+    margin-left: 0px;
+  }
+
+  .contact_way {
+    position: relative;
+    top: 40%;
+  }
+  .contact_platform {
+    flex-direction: column;
+    /* background: orange; */
+  }
 }
 
-main .left .products_box .left_div .left_content img{
-    height: 300px;
-    width: 300px;
-    border-radius: 4px;
+@keyframes navTransition {
+  0% {
+    top: -400px;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }
 }
-
-img{
-    width: 150px;
-    height: 200px;
-}
-img.main_img{
-    height: 100px !important;
-    width: 100px !important;
-    /* border: 1px solid black; */
-}
-
-
-
-
-
-
-
-
